// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cascading memberships default profiles from organization 1`] = `
Object {
  "user1 is a Owner on teamA": true,
  "user1 is a Owner on teamB": true,
  "user1 is a Owner on teamC": true,
  "user1 is a Owner on teamD": true,
}
`;

exports[`cascading memberships inherits org profile 1`] = `
Object {
  "user3 is a Editor on teamC": true,
  "user3 is a Editor on teamD": true,
  "user3 is a Editor on teamE": true,
  "user3 is a Editor on teamF": true,
  "user3 is not a Editor on teamA": true,
  "user3 is not a Editor on teamB": true,
}
`;

exports[`cascading memberships user2 has a 1`] = `
Object {
  "user3 is a Editor on teamD": true,
  "user3 is a Editor on teamF": true,
}
`;
